# endo-but-for-bots

./: .eslintignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  package.json  tsconfig.json  typedoc.json
.changeset/: add-endo-xorshift.md  base64-harden.md  base64-native-fallthrough.md  check-bundle-use-endo-hex.md  cli-daemon-use-endo-hex.md  compartment-mapper-sha512-hex.md  ocapn-use-endo-hex.md  syrup-frame-initial.md  xorshift-shared-prng.md
.github/workflows/: browser-test.yml  ci.yml  depcheck.yml  familiar-release.yml  release.yml  rust-endor.yml  typedoc-gh-pages.yml  update-action-pins-major.yml  update-action-pins.yml
TADA/: 00_genie_tests_must_pass.md
designs/: COVERAGE-STATE.md  LOOP-STATE.md  LOOP.md  QUESTIONS.md  README.md  daemon-cas-management.md  daemon-make-archive.md  daemon-message-streaming.md  endor-npm-registry-proxy.md  endor-run-expanded.md  familiar-unified-weblet-server.md  ocapn-noise-network.md
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
rust/endo/: .gitignore  Cargo.toml
rust/endo/slots/: Cargo.toml
rust/endo/slots/src/: error.rs  gc.rs  kref.rs  lib.rs  promise.rs  refcount.rs  session.rs  store.rs  table.rs  vref.rs
rust/endo/slots/src/wire/: codec.rs  descriptor.rs  mod.rs  payload.rs  translate.rs
rust/endo/src/: cas.rs  codec.rs  endo.rs  lib.rs  supervisor.rs
rust/endo/xsnap/: build.rs  xsnap-platform.h
rust/endo/xsnap/src/: daemon_bootstrap.js  lib.rs  (+1 more)
rust/endor/: Cargo.toml
rust/endor/src/: main.rs
rust/ocapn_noise/: README.md  build.sh
scripts/: check-no-ci-lifecycle.mjs
